Added option to changed discord chat layout

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
 webhookURL: ""
 discordToken: ""
 channelID: ""
-chatLayout: "&d[Discord] &f%username% > "
+chatLayout: "&d[Discord] &f{username} > {message}"
